implement posts pagination with will_paginate

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -27,6 +27,10 @@
       <% end %>
     </tbody>
   </table>
+
+  <div class="text-center">
+    <%= will_paginate @posts %>
+  </div>
   
 
 </div>
